--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>KTMFANS</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="multimedia/ktm.ico">
+    <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&family=Cabin:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&family=Cabin:ital@1&family=PT+Serif&family=Play&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
   <body>
@@ -34,36 +37,99 @@
               </div>
             </div>
           </nav>
-    </header>
-    <article class="article_carouser">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="multimedia/imagenes/KTM-nueva-linea-490-Duke.jpg" class="d-block w_img" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="multimedia/imagenes/croosfull.jpg" class="d-block w_img" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="multimedia/imagenes/daker.jpg" class="d-block w_img" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <header class="main-header">
+           <div class="background-overlay text-white py-5">
+                 <div class="container">
+                  <div class="row">
+                    <div class="col-md-6 text-center justify-content-center align-self-center">
+                       <h1>BIENVENIDO A KTM DESCUBRE AVENTURAS</h1>
+                       <p>Somos un estilo de vida en dos ruedas</p>
+                       <a href="" class="btn btn-outline-secundary btn-lg text-white">conocenos</a>
+                    </div>
+                    <div class="col-md-6">
+                      <img src="./multimedia/imagenes/superduke.jpg" alt="ktm sport" class="img-fulid d-none d-sm-block" style="width:100%;">
+                    </div>
+                  </div>
+                 </div>
+           </div>
+        </header>
+        <div class="title__h2">
+          <h2 class="title__h2-container">ELIGE TU ESTILO !</h2> 
       </div>
-    </article>
-    <div class="title__h2">
-      <h2 class="title__h2-container">ELIGE TU ESTILO !</h2> 
-  </div>
 
+ <section class="container-fluid">
+          <div class="row">
+            <div class="col text-center justify-content-center align-self-center">
+              <h2 class="container text-align-center">
+                cada uno de los estilos esta diseñado para diferentes rutas y experiencias
+              </h2>
+              <p>
+                KTM es conocida por sus motocicletas todo terreno, aunque en los últimos años se ha expandido a la producción de motocicletas de calle, así como el desarrollo de un coche deportivo y bicicletas.
+              </p>
+            </div>
+            <div class="col col-sm-7">
+              <section>
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                  <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="./multimedia/imagenes/ktmadventure.jpg" class="d-block w-100 img-fulid" alt="...">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="./multimedia/imagenes/1366_2000.jpg" class="d-block w-100 img-fulid" alt="...">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="./multimedia/imagenes/ktmenduro.jpg" class="d-block w-100 img-fulid" alt="enduro">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+              </section>
+            </div>
+          </div>
+ </section>
+      
 
-  </section>
+          <footer>
+            <section class="bg-dark text-white py-5">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-4 ">
+                    <p class="p-footer">conoce nuestras redes</p>
+                  </div>
+                  <div class="col-md-4 ">
+                    <a href="" class="text-decoration"><i class="fa fa-instagram"> instagram</i></a>
+                  </div>
+                  <div class="col-md-4">
+                    <a href="" class="text-decoration"><i class="fa fa-facebook"> facebook</i></a>
+                  </div>
+                </div>          
+              </div>
+          </div>
+          </section>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
