agregando bootstrap a noticias.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-a"  href="#">MODELOS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-a  disabled">NOTICIAS</a>
+                    <a class="nav-a  disabled" href="./carpetas/noticias.html">NOTICIAS</a>
                   </li>
                 </ul>
               </div>
@@ -46,13 +46,18 @@
                        <p>Somos un estilo de vida en dos ruedas</p>
                        <a href="" class="btn btn-outline-secundary btn-lg text-white">conocenos</a>
                     </div>
-                    <div class="col-md-6">
-                      <img src="./multimedia/imagenes/superduke.jpg" alt="ktm sport" class="img-fulid d-none d-sm-block" style="width:100%;">
+                    <div class="col-md-6 div__img">
+                      <img src="./multimedia/imagenes/superduke.jpg" alt="ktm sport" class="img-fulid d-none d-sm-block" style="width:100%; border: 2px solid #000; border-radius: 5%;">
                     </div>
                   </div>
                  </div>
            </div>
         </header>
+
+        <div class="row">
+          <img class="col-sm-6 img__clas p-0" src="./multimedia/imagenes/ktmlogo20.png" alt="">
+          <video class="col-sm-6" src="./multimedia/KTM presents the 1290 SUPER DUKE R Prototype _ KTM (1).mp4"  autoplay muted loop></video>
+        </div>
         <div class="title__h2">
           <h2 class="title__h2-container">ELIGE TU ESTILO !</h2> 
       </div>
@@ -110,8 +115,6 @@
             </div>
           </div>
  </section>
-      
-
           <footer>
             <section class="bg-dark text-white py-5">
               <div class="container">
