--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -25,13 +25,13 @@
                     <a class="nav-a active" aria-current="page" href="../index.html">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-a"  href="#">ACCESORIOS</a>
+                    <a class="nav-a"  href="accesorios.html">ACCESORIOS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-a"  href="#">MODELOS</a>
+                    <a class="nav-a"  href="modelos.html">MODELOS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-a">NOTICIAS</a>
+                    <a class="nav-a" href="noticias.html">NOTICIAS</a>
                   </li>
                 </ul>
               </div>
