--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-a active" aria-current="page" href="#">HOME</a>
+                    <a class="nav-a active" aria-current="page" href="index.html">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-a"  href="#">ACCESORIOS</a>
+                    <a class="nav-a"  href="./carpetas/accesorios.html">ACCESORIOS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-a"  href="#">MODELOS</a>
+                    <a class="nav-a"  href="./carpetas/modelos.html">MODELOS</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-a  disabled" href="./carpetas/noticias.html">NOTICIAS</a>
@@ -44,7 +44,7 @@
                     <div class="col-md-6 text-center justify-content-center align-self-center">
                        <h1>BIENVENIDO A KTM DESCUBRE AVENTURAS</h1>
                        <p>Somos un estilo de vida en dos ruedas</p>
-                       <a href="" class="btn btn-outline-secundary btn-lg text-white">conocenos</a>
+                       <a href="./carpetas/noticias.html" class="btn btn-outline-secundary btn-lg text-white">conocenos</a>
                     </div>
                     <div class="col-md-6 div__img">
                       <img src="./multimedia/imagenes/superduke.jpg" alt="ktm sport" class="img-fulid d-none d-sm-block" style="width:100%; border: 2px solid #000; border-radius: 5%;">
@@ -53,15 +53,15 @@
                  </div>
            </div>
         </header>
-
+      <div class="container-fluid">
         <div class="row">
-          <img class="col-sm-6 img__clas p-0" src="./multimedia/imagenes/ktmlogo20.png" alt="">
-          <video class="col-sm-6" src="./multimedia/KTM presents the 1290 SUPER DUKE R Prototype _ KTM (1).mp4"  autoplay muted loop></video>
+          <img class="col-sm-6 img__clas" src="./multimedia/imagenes/ktmlogo20.png" alt="">
+          <video class="col-sm-6" src="./multimedia/KTM presents the 1290 SUPER DUKE R Prototype _ KTM (1).mp4"  autoplay muted></video>
         </div>
         <div class="title__h2">
           <h2 class="title__h2-container">ELIGE TU ESTILO !</h2> 
       </div>
-
+      </div>
  <section class="container-fluid">
           <div class="row">
             <div class="col text-center justify-content-center align-self-center">
