--- a/carpetas/accesorios.html
+++ b/carpetas/accesorios.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACCESORIOS</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&family=Cabin:ital@1&display=swap" rel="stylesheet">
