--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Noticias</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&family=Cabin:ital@1&display=swap" rel="stylesheet">
@@ -38,10 +38,12 @@
             </div>
           </nav>
 <h1 class="h1__noticia">noticias</h1>
-<div class="container__gird">  
+<div class="container__gird">
+  
+  
     <article class="article__1">
         <div class="card" style="width:100%;">
-            <img src="../multimedia/imagenes/motogp.jpg" class="card-img-top" alt="../multimedia/imagenes/motogp.jpg">
+            <img src="../multimedia/imagenes/motogp.jpg" class="card-img-top img__article-1" alt="../multimedia/imagenes/motogp.jpg">
             <div class="card-body">
               <h5 class="card-title">"Ha sido el mejor viernes de todo el año"</h5>
               <p class="card-text">
@@ -49,7 +51,6 @@
               <a href="https://as.com/noticias/ktm/" target="_blank" class="btn btn-dark">mas..</a>
             </div>
           </div>
-
     </article>
  
     <article class="article__2">
