--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KTMFANS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&family=Cabin:ital@1&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
                  <div class="container">
                   <div class="row">
                     <div class="col-md-6 text-center justify-content-center align-self-center">
-                       <h1>BIENVENIDO A KTM DESCUBRE AVENTURAS</h1>
+                       <h1 class="h1__bg">BIENVENIDO A KTM DESCUBRE AVENTURAS</h1>
                        <p>Somos un estilo de vida en dos ruedas</p>
                        <a href="./carpetas/noticias.html" class="btn btn-outline-secundary btn-lg text-white">conocenos</a>
                     </div>
@@ -53,16 +53,16 @@
                  </div>
            </div>
         </header>
-      <div class="container-fluid">
+      <div class="container-fluid my-2 ">
         <div class="row">
-          <img class="col-sm-6 img__clas" src="./multimedia/imagenes/ktmlogo20.png" alt="">
+          <img class="col-sm-6" src="./multimedia/imagenes/ktmlogo20.png" alt="">
           <video class="col-sm-6" src="./multimedia/KTM presents the 1290 SUPER DUKE R Prototype _ KTM (1).mp4"  autoplay muted></video>
         </div>
         <div class="title__h2">
           <h2 class="title__h2-container">ELIGE TU ESTILO !</h2> 
       </div>
       </div>
- <section class="container-fluid">
+ <section class="container-fluid my-4">
           <div class="row">
             <div class="col text-center justify-content-center align-self-center">
               <h2 class="container text-align-center">
@@ -73,7 +73,7 @@
               </p>
             </div>
             <div class="col col-sm-7">
-              <section>
+             <section>
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -82,21 +82,21 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="./multimedia/imagenes/ktmadventure.jpg" class="d-block w-100 img-fulid" alt="...">
+                      <img src="./multimedia/imagenes/ktmadventure.jpg" class="d-block img__carousel" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./multimedia/imagenes/1366_2000.jpg" class="d-block w-100 img-fulid" alt="...">
+                      <img src="./multimedia/imagenes/1366_2000.jpg" class="d-block img__carousel" alt="...">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./multimedia/imagenes/ktmenduro.jpg" class="d-block w-100 img-fulid" alt="enduro">
+                      <img src="./multimedia/imagenes/ktmenduro.jpg" class="d-block img__carousel" alt="enduro">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
