agregando mixins y mapas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KTMFANS</title>
+    <title>KTMFANS </title>
+    <meta name="" content="">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
@@ -15,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-col">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img class="img__nav" src="multimedia/imagenes/ktmlogo.jpg" alt="logo"></a>
+              <a class="navbar-brand" href="index.html"><img class="img__nav" src="multimedia/imagenes/ktmlogo.jpg" alt="logo"></a>
               <button class="navbar-toggler" id="button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -38,16 +39,17 @@
             </div>
           </nav>
         <header class="main-header">
+          <span class="location-fa"><a href="https://www.google.com/maps/search/ktm+concesionario/@-34.6139295,-58.4672092,12z/data=!3m1!4b1" target="_blank"><i class="fas fa-map"></i></a></span>
            <div class="background-overlay text-white py-5">
                  <div class="container">
                   <div class="row">
-                    <div class="col-md-6 text-center justify-content-center align-self-center">
+                    <div class="container__animation col-md-6 text-center justify-content-center align-self-center">
                        <h1 class="h1__bg">BIENVENIDO A KTM DESCUBRE AVENTURAS</h1>
                        <p>Somos un estilo de vida en dos ruedas</p>
                        <a href="./carpetas/noticias.html" class="btn btn-outline-secundary btn-lg text-white">conocenos</a>
                     </div>
                     <div class="col-md-6 div__img">
-                      <img src="./multimedia/imagenes/superduke.jpg" alt="ktm sport" class="img-fulid d-none d-sm-block" style="width:100%; border: 2px solid #000; border-radius: 5%;">
+                      <img src="./multimedia/imagenes/superduke.jpg" alt="ktm sport" class="img__header img-fulid d-none d-sm-block" >
                     </div>
                   </div>
                  </div>
@@ -55,8 +57,8 @@
         </header>
       <div class="container-fluid my-2 ">
         <div class="row">
-          <img class="col-sm-6" src="./multimedia/imagenes/ktmlogo20.png" alt="">
-          <video class="col-sm-6" src="./multimedia/KTM presents the 1290 SUPER DUKE R Prototype _ KTM (1).mp4"  autoplay muted></video>
+          <img class="col-sm-6" src="./multimedia/imagenes/ktmlogo20.png" alt="logo de ktm">
+          <video class="col-sm-6" src="./multimedia/KTM presents the 1290 SUPER DUKE R Prototype _ KTM (1).mp4" title="ktm1290" autoplay muted></video>
         </div>
         <div class="title__h2">
           <h2 class="title__h2-container">ELIGE TU ESTILO !</h2> 
@@ -82,7 +84,7 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="./multimedia/imagenes/ktmadventure.jpg" class="d-block img__carousel" alt="...">
+                      <img src="./multimedia/imagenes/ktmadventure.jpg" class="d-block img__carousel" alt="ktm adventura">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
