--- a/carpetas/modelos.html
+++ b/carpetas/modelos.html
@@ -39,7 +39,7 @@
           </nav>
 
           <header class="header__modelos">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <section id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="../multimedia/imagenes/ktmenduro.jpg" class="d-block w-100" alt="..." height="600vw">
@@ -51,7 +51,7 @@
                   <img src="../multimedia/imagenes/croosfull.jpg" class="d-block w-100" alt="..." height="600vw">
                 </div>
               </div>
-            </div>
+            </section>
           </header>
           
           <div>
