agregando mapas exteds mixins

--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Noticias</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="una pagina para segir todo el contenido he innovacion de la marca desde sus modelos mas recientes y sus noticias">
+    <meta name="keywords" content="ktm, supermotos, motocroos,  ktm, opiniones, noticias, campeonatos, redbull, eventos">
+    <meta property="og:title" content="noticias / KTM ready to compete 2022">
+    <meta property="og:image" content="file:///C:/Users/Anderson/Desktop/proyecto-coder-scss/multimedia/imagenes/ktmlogo.jpg">
+    <meta property="og:description" content="matente al dia con todas nuestras innovaciones!">
+    <title>Noticias / KTM ready to compete 2022</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
@@ -15,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-col">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img class="img__nav" src="../multimedia/imagenes/ktmlogo.jpg" alt="logo"></a>
+              <a class="navbar-brand" href="#z"><img class="img__nav" src="../multimedia/imagenes/ktmlogo.jpg" alt="logo"></a>
               <button class="navbar-toggler" id="button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -43,7 +49,7 @@
   
     <article class="article__1">
         <div class="card" style="width:100%;">
-            <img src="../multimedia/imagenes/motogp.jpg" class="card-img-top img__article-1" alt="../multimedia/imagenes/motogp.jpg">
+            <img src="../multimedia/imagenes/motogp.jpg" class="card-img-top img__article-1" alt="motogp.jpg">
             <div class="card-body">
               <h5 class="card-title">"Ha sido el mejor viernes de todo el año"</h5>
               <p class="card-text">
@@ -67,7 +73,7 @@
             KTM mostró en su totalidad a la nueva SMR 2023, la supermotard de la firma naranja que pinta muy bien para el próximo año.
             Con algunas mejoras específicas y un sutil lavado de cara, KTM lanzó su 450 SMR 2023, una de sus motos más atractivas ya sea por diversión como por deportividad. Se trata de una supermotard que tuvo ciertas revisiones para ser aun más ágil, rápida y efectiva que nunca.
         </p>
-        <img class="img__article-3" src="../multimedia/imagenes/KTM-450-SMR-2023-accion.jpg" alt="">
+        <img class="img__article-3" src="../multimedia/imagenes/KTM-450-SMR-2023-accion.jpg" alt=" ktm 450">
     </article>
     
      <article class="article__4">
@@ -83,7 +89,7 @@
             El tridente campeón de KTM para reconquistar el Dakar
             Matthias Walkner, Toby Price y Kevin Benavides formarán la alineación de lujo de KTM para afrontar el Dakar 2022 e intentarán recuperar la victoria tras dos derrotas consecutivas.
          </p>
-         <img class="img__article-5"  src="../multimedia/imagenes/daker.jpg" alt="">
+         <img class="img__article-5"  src="../multimedia/imagenes/daker.jpg" alt="tridente campeon">
      </article>
 </div>
 <footer>
