--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <!--meta tags-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>KTMFANS </title>
-    <meta name="" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="ktm-fans una pagina para segir todo el contenido he innovacion de la marca desde sus modelos mas recientes y sus noticias">
+    <meta name="keywords" content="ktm, supermotos, motocroos, fans, ktm, opiniones">
+    <meta property="og:title" content="KTM ready to compete 2022">
+    <meta property="og:image" content="file:///C:/Users/Anderson/Desktop/proyecto-coder-scss/multimedia/imagenes/ktmlogo.jpg">
+    <meta property="og:description" content="conocenos y se parte de nuestra comunidad">
+    <title>KTM ready to compete 2022</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
@@ -91,7 +97,7 @@
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./multimedia/imagenes/1366_2000.jpg" class="d-block img__carousel" alt="...">
+                      <img src="./multimedia/imagenes/1366_2000.jpg" class="d-block img__carousel" alt="motos ktm">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
