--- a/carpetas/modelos.html
+++ b/carpetas/modelos.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MODELOS</title>
+    <title>MODELOS / KTM ready to compete 2022</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="todo el contenido he innovacion de la marca desde sus modelos mas recientes y sus noticias hasta sus accesorios">
+    <meta name="keywords" content="ktm, supermotos, motocroos,  ktm, opiniones,redbull, indumetaria, cascos, accesorios, articulos, compra, opiniones">
+    <meta name="keywords" content="duke, duke 200, naked, Adventure, race, duk3 390, superduke 1290">
+    <meta property="og:title" content="accesorios / KTM ready to compete 2022">
+    <meta property="og:image" content="file:///C:/Users/Anderson/Desktop/proyecto-coder-scss/multimedia/imagenes/ktmlogo.jpg">
+    <meta property="og:description" content="mira todos nuestros modelos!">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../multimedia/ktm.ico">
     <script src=" https://kit.fontawesome.com/62ea397d3a.js" crossoringin="anonymous"></script>
@@ -39,19 +46,24 @@
           </nav>
 
           <header class="header__modelos">
-            <section id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="../multimedia/imagenes/ktmenduro.jpg" class="d-block w-100" alt="..." height="600vw">
+            <div class="carousel__content">
+              <section id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../multimedia/imagenes/ktmenduro.jpg" class="d-block" alt="motos enduro" height="300px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../multimedia/imagenes/KTM-450-SMR-2023-accion.jpg" class="d-block" alt="moto adventure" height="300px">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../multimedia/imagenes/croosfull.jpg" class="d-block" alt="moto racer" height="300px">
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="../multimedia/imagenes/KTM-450-SMR-2023-accion.jpg" class="d-block w-100" alt="..." height="600vw">
-                </div>
-                <div class="carousel-item">
-                  <img src="../multimedia/imagenes/croosfull.jpg" class="d-block w-100" alt="..." height="600vw">
-                </div>
-              </div>
-            </section>
+              </section>
+              <article>
+                <h1>MODELOS DE TODOS NUESTROS PRODUCTOS</h1>
+              </article>
+            </div>
           </header>
           
           <div>
@@ -63,7 +75,7 @@
                   <P class="article__naked-p">
                       Generalmente las motos naked se construyen con un tanque más grande y más largo. Además, este tipo de motocicletas también tienen controles de pie más traseros para evitar que las estriberas raspen el pavimiento, especialmente durante las curvas. Generalmente tienen sus controles de pie colocados más en el centro con un manillar de elevación más alto. Por tanto, la ubicación del manillar como de los controles de pie afecta también a la postura del motorista, así como a la silueta general de la moto.
                   </P>
-                  <iframe class="article__naked-iframe"  height="315" src="https://www.youtube.com/embed/po_W7qhP_7s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe class="article__naked-iframe"  height="315" src="https://www.youtube.com/embed/po_W7qhP_7s?autoplay=1" title="moto super naked test drive" frameborder="0" allowfullscreen></iframe>
                  </article>
               </div>
             </div>
@@ -76,7 +88,7 @@
                   <p class="article__adventure-p">
                       La KTM 390 ADVENTURE lleva la exploración más allá al fusionar la versatilidad offroad y la probada fiabilidad con unas prestaciones para el mundo real. Construida en torno a un compacto motor monocilíndrico de 373 cc, con una parte ciclo capaz y ligera y una electrónica líder en su clase, la KTM 390 ADVENTURE te anima a descubrir nuevas fronteras con la inigualable capacidad y emoción que esperas de una KTM ADVENTURE. Con un diseño actualizado para 2022
                   </p>
-                  <iframe class="article__adventure-iframe" width="560" height="315" src="https://www.youtube.com/embed/NpCubYprqFQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
+                  <iframe class="article__adventure-iframe" width="560" height="315" src="https://www.youtube.com/embed/NpCubYprqFQ" title="motos adventure test drive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
                 </article>
                 </div>
               </div>             
@@ -89,7 +101,7 @@
                 <p class="article__supersport-p">
                     La KTM RC 8C es un arma ultraligera de circuito diseñada con un simple propósito: destrozar los tiempos por vuelta y demostrar la autoridad naranja en la parrilla de salida. Con una producción de tan sólo 100 unidades de estas exclusivas armas, la KTM RC 8C es una motocicleta única y muy limitada, dirigida a un tipo especial de piloto que sabe cómo dar el máximo. 
                 </p>
-                <iframe class="article__supersport-iframe"  width="560" height="315" src="https://www.youtube.com/embed/qygnU6dKFi0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="article__supersport-iframe"  width="560" height="315" src="https://www.youtube.com/embed/qygnU6dKFi0" title="motos SUPERSPORT prueba y opiniones" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                </article>
             </div>
            </div>
@@ -102,7 +114,7 @@
                   <p class="article__enduro-p">
                       Todas las máquinas de 2 tiempos de KTM son el fruto del trabajo de un departamento de investigación y desarrollo dedicado a mantener cada modelo a la vanguardia de la jerarquía de la competición de enduro. En el nivel de entrada de la gama KTM EXC 2023 se encuentra la KTM 150 EXC, ágil, ligera y plenamente preparada para la competición. En mitad del grupo, la KTM 250 EXC se presenta como la máquina de velocidad absoluta, y la legendaria KTM 300 EXC ocupa el escalón más alto de un podio en el que todos los modelos se benefician de los desarrollos tecnológicos más avanzados del segmento. s
                   </p>
-                  <iframe class="article__enduro-iframe" width="560" height="315" src="https://www.youtube.com/embed/H7CBxLI7_8E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe class="article__enduro-iframe" width="560" height="315" src="https://www.youtube.com/embed/H7CBxLI7_8E" title="motos enduro ktm" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                  </article>
               </div>
 
