--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -93,22 +93,28 @@
      </article>
 </div>
 <footer>
-    <section class="bg-dark text-white py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 ">
-            <p class="p-footer">conoce nuestras redes</p>
-          </div>
-          <div class="col-md-4 ">
-            <a href="" class="text-decoration"><i class="fa fa-instagram"> instagram</i></a>
-          </div>
-          <div class="col-md-4">
-            <a href="" class="text-decoration"><i class="fa fa-facebook"> facebook</i></a>
-          </div>
-        </div>          
-      </div>
-  </div>
-  </section>
+  <p class="p__footer">
+    Esta pagina esta diseñada para entrener a los fanaticos de la marca y mantenerlos infomados de los sucesos mas relevantes de misma, para compartir esta pasion que tenemos 
+    Determinadas características de los vehículos que aparecen en las imágenes pueden variar con respecto a los modelos de serie, y algunas imágenes muestran equipamiento opcional, disponible por un coste adicional. 
+  </p>
+<section class="d-flex justify-content-start bg-color">
+    <ul class="footer__ul-redes w-50">
+      <li class="footer__li-redes"><a href="">Instagram</a></li>
+      <li class="footer__li-redes"><a href="">Facebook</a></li>
+      <li class="footer__li-redes"><a href="">Twitter</a></li>
+      <li class="footer__li-redes"><a href="">Email</a></li>
+   </ul>
+
+    <ul class="w-50 footer__ul-redes">
+        <li class="footer__li-redes"><a href="https://www.google.com/maps/search/ktm+concesionario/@-34.6138895,-58.4672093,12z/data=!3m1!4b1">agecias</a></li>
+        <li class="derechos__container"> 
+          Derechos
+        <span>
+          todos los derechos y las imagenes que se muestran son ilustrativas y descargadas de internet
+       </span>
+      </li>
+    </ul>
+</section>
 </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
