--- a/carpetas/modelos.html
+++ b/carpetas/modelos.html
@@ -45,7 +45,7 @@
             </div>
           </nav>
 
-          <header class="header__modelos">
+          <div class="header__modelos">
             <div class="carousel__content">
               <section id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -64,6 +64,7 @@
                 <h1>MODELOS DE TODOS NUESTROS PRODUCTOS</h1>
               </article>
             </div>
+          </div>
           </header>
           
           <div>
