--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 
         <ul class="w-100 footer__ul-location">
              UBICANOS
-            <li class="footer__li-location"><a href="https://www.google.com/maps/search/ktm+concesionario/@-34.6138895,-58.4672093,12z/data=!3m1!4b1">NUESTROS LOCALES!</a>
+            <li class="footer__li-location">
+              <a href="https://www.google.com/maps/search/ktm+concesionario/@-34.6138895,-58.4672093,12z/data=!3m1!4b1" class="d-sm-none"> NUESTROS LOCALES!</a>
             </li>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52550.13610215325!2d-58.48811030387878!3d-34.59446264607527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb9cf8876b6b%3A0x2dfae00350799a30!2sKTM%20Palermo!5e0!3m2!1ses-419!2sar!4v1658201939575!5m2!1ses-419!2sar" width="90%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
