--- a/carpetas/accesorios.html
+++ b/carpetas/accesorios.html
@@ -20,7 +20,7 @@
   <body>
    <div  class="bg-accesorios">
     <header>
-      <nav class="navbar navbar-expand-lg bg-warning">
+      <nav class="navbar navbar-expand-lg bg-col">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img class="img__nav" src="../multimedia/imagenes/ktmlogo.jpg" alt="logo"></a>
             <button class="navbar-toggler" id="button" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
