--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&family=Cabin:ital@1&family=PT+Serif&family=Play&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="bg__noticias">
     <header>
         <nav class="navbar navbar-expand-lg bg-col">
             <div class="container-fluid">
