--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -92,7 +92,7 @@
          <img class="img__article-5"  src="../multimedia/imagenes/daker.jpg" alt="tridente campeon">
      </article>
 </div>
-<<footer>
+<footer>
   <p class="p__footer">
     Esta pagina esta diseñada para entrener a los fanaticos de la marca y mantenerlos infomados de los sucesos mas relevantes de misma, para compartir esta pasion que tenemos 
     Determinadas características de los vehículos que aparecen en las imágenes pueden variar con respecto a los modelos de serie, y algunas imágenes muestran equipamiento opcional, disponible por un coste adicional. 
