--- a/carpetas/modelos.html
+++ b/carpetas/modelos.html
@@ -50,18 +50,20 @@
               <section id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../multimedia/imagenes/ktmenduro.jpg" class="d-block responsive_img" alt="motos enduro" height="300px">
+                    <img src="../multimedia/imagenes/ktmenduro.jpg" class="d-block responsive_img" alt="motos enduro" height="300px" style="border:3px solid #000;">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/imagenes/KTM-450-SMR-2023-accion.jpg" class="d-block responsive_img" alt="moto adventure" height="300px">
+                    <img src="../multimedia/imagenes/KTM-450-SMR-2023-accion.jpg" class="d-block responsive_img" alt="moto adventure" height="300px" style="border:3px solid #000;">
                   </div>
                   <div class="carousel-item">
-                    <img src="../multimedia/imagenes/daker.jpg" class="d-block responsive_img" alt="moto racer" height="300px">
+                    <img src="../multimedia/imagenes/daker.jpg" class="d-block responsive_img" alt="moto racer" height="300px" style="border:3px solid #000;">
                   </div>
                 </div>
               </section>
-              <article>
-                <h1>MODELOS DE TODOS NUESTROS PRODUCTOS</h1>
+              <article class="span__animation-container">
+                <span class="span__animation">
+                  NUESTRAS CATEGORIAS
+                </span>
               </article>
             </div>
           </div>
