--- a/carpetas/noticias.html
+++ b/carpetas/noticias.html
@@ -43,7 +43,11 @@
               </div>
             </div>
           </nav>
-<h1 class="h1__noticia">noticias</h1>
+
+          
+<h1 class="h1__noticia">NOTICIAS</h1>
+
+
 <div class="container__gird">
   
   
