--- a/carpetas/accesorios.html
+++ b/carpetas/accesorios.html
@@ -184,10 +184,10 @@
      <section class="d-flex justify-content-start bg-color">
           <ul class="footer__ul-redes w-100">
             NUESTRAS REDES
-            <li class="footer__li-redes"><a href="">Instagram</a></li>
-            <li class="footer__li-redes"><a href="">Facebook</a></li>
-            <li class="footer__li-redes"><a href="">Twitter</a></li>
-            <li class="footer__li-redes"><a href="">Email</a></li>
+            <li class="footer__li-redes"><a href="https://www.instagram.com/ktm_official/?hl=es" target="_blank" >INSTAGRAM</a></li>
+            <li class="footer__li-redes"><a href="https://www.facebook.com/KTMArgentina/" target="_blank">FACEBOOK</a></li>
+            <li class="footer__li-redes"><a href="https://twitter.com/ktmargentina" target="_blank">TWITTER</a></li>
+            <li class="footer__li-redes  d-none d-sm-block"><a>E-mail: info@ktmcanampalermo.com</a></li>
          </ul>
   
           <ul class="w-100 footer__ul-location">
